fix(?) vertical alignment on site title h1

--- a/css/main.css
+++ b/css/main.css
@@ -365,5 +365,5 @@ h1 {
     color: #789;
     margin: 0;
     font-size: 18px;
-    line-height: 72px;
+    line-height: 1.9em;
 }
